# qcweb

./: .envrc  .flake8  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
cli/: list.py  test.py
qcweb/: __init__.py  __main__.py  settings.py
qcweb/qc/: endpoints.py  fan.py  models.py  request.py
qcweb/routers/: __init__.py  fan.py
tests/: test_qcweb.py
