[tool.poetry]
name = "qcweb"
version = "0.1.0"
description = ""
authors = ["Chris Skalenda <chris@skalenda.org>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
aiocoap = "^0.4.1"
pyparsing = "^2.4.7"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.0"
black = "^20.8b1"
pdbpp = "^0.10.2"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
